--- a/New_site/css/layout.css
+++ b/New_site/css/layout.css
@@ -137,7 +137,7 @@ input.button {
 #logos #university {
 	float: right; 
 	padding: 16px 21px 0px 0px;
-	background-image: url(../images/logo_ieeeWHT.png);
+	background-image: url(../images/BVPIEEE.png);
 	background-repeat: no-repeat;
 	background-position: 0 16px;
 }
